src/test/resources/frontendReference/invalid/syntaxErr/variables/varNoName.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 13:6 -- no viable alternative at input 'int='
1 parser error(s) detected, no further compilation attempted.
